--- a/css/mediaCI.css
+++ b/css/mediaCI.css
@@ -40,6 +40,14 @@
 }
 
 /*1426 px*/
+@media screen and (max-width:200px){
+  .footer{
+    margin-left: 22rem;
+    width: 60%;
+  }
+}
+
+/*1426 px*/
 @media screen and (max-width:1500px){
   .footer{
     margin:0;
