--- a/css/mediaCE.css
+++ b/css/mediaCE.css
@@ -45,6 +45,15 @@
       width: 60%;
     }
   }
+
+  /*1280 px*/
+@media screen and (max-width:4000px){
+  .footer{
+    height: 600px;
+    margin-left: 42rem;
+  }
+}
+
   
   /*1426 px*/
   @media screen and (max-width:1500px){
