added space to about me and changed @ to 2024

--- a/css/about_me.css
+++ b/css/about_me.css
@@ -113,6 +113,10 @@
     color: white;
   }
 
+  .container-blocks {
+    margin-top: 3em;
+  }
+
   #block1 {
     display: flex;
     align-items: center;
